--- a/Neocom.WebUI/src/index.html
+++ b/Neocom.WebUI/src/index.html
@@ -1,14 +1,42 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>NeocomWeb</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>NeocomWeb</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Fonts to be used and frameworks -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <style>
+      .loading {
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        display: -webkit-inline-box;
+        margin-left: 21em;
+        margin-right: auto;
+        margin-top: 50px;
+        padding-right: 30px;
+        padding-left: 30px;
+        width: 200px;
+      }
+
+    </style>
+  </head>
+
+  <body>
+    <app-root><span class="loading">Loading...</span></app-root>
+  </body>
+
 </html>
