-Changes on the rendering to complete and adapt to the Android data presentation. -Added totalization to the Location.
Former-commit-id: 7b71b7ed3754569779c4d65973cc35cdab8a7e8c

--- a/Neocom.WebUI/src/index.html
+++ b/Neocom.WebUI/src/index.html
@@ -11,32 +11,33 @@
 
     <!-- Fonts to be used and frameworks -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
       integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Menu styles -->
+    <!-- <link rel="stylesheet" href="https://unpkg.com/ng2-menu/dist/ng2-menu.css" /> -->
 
     <style>
       .loading {
-        font-family: 'Roboto', sans-serif;
-        font-size: 20px;
-        display: -webkit-inline-box;
-        margin-left: 21em;
-        margin-right: auto;
+        font-size: 40px;
+        text-shadow: 0px 0px 6px white;
+        margin-left: 100%;
+        position: absolute;
         margin-top: 50px;
-        padding-right: 30px;
+        /*padding-right: 30px;
         padding-left: 30px;
-        width: 200px;
+        width: 200px;*/
       }
 
     </style>
   </head>
 
   <body>
-    <app-root><span class="loading">Loading...</span></app-root>
+    <app-root><span class="loading elemental-ff">Loading...</span></app-root>
   </body>
 
 </html>
