--- a/Neocom.WebUI/src/index.html
+++ b/Neocom.WebUI/src/index.html
@@ -1,60 +1,64 @@
 <!doctype html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>NeocomWeb</title>
-    <base href="/">
+<head>
+  <meta charset="utf-8">
+  <title>NeocomWeb</title>
+  <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- Fonts to be used and frameworks -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <!-- Fonts to be used and frameworks -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!-- Menu styles -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/ng2-menu/dist/ng2-menu.css" /> -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Menu styles -->
+  <!-- <link rel="stylesheet" href="https://unpkg.com/ng2-menu/dist/ng2-menu.css" /> -->
 
-    <style>
-      .loading {
-        font-size: 24px;
-        text-shadow: 0px 0px 6px white;
-        padding-right: 30px;
-        padding-left: 5px;
-        padding-top: 10px;
-      }
+  <style>
+    .loading {
+      font-size: 24px;
+      text-shadow: 0px 0px 6px white;
+      padding-right: 30px;
 
-      .loading-header {
-        padding-left: 5px;
-        margin-top: 10px;
-        padding-top: 10px;
-        font-size: 40px;
-        text-shadow: 0px 0px 6px white;
-      }
+      padding-bottom: 10px;
+      padding-left: 5px;
+      /* padding-right: 10px; */
+      padding-top: 10px;
+      margin: 1px;
+      margin-top: 0px;
+      margin-right: 3px;
+    }
 
-      @font-face {
-        font-family: "Elemental";
-        font-style: normal;
-        font-weight: normal;
-        src: url("./assets/fonts/Elemental End.ttf");
-      }
+    .loading-header {
+      padding-left: 5px;
+      margin-top: 10px;
+      padding-top: 10px;
+      font-size: 40px;
+      text-shadow: 0px 0px 6px white;
+    }
 
-      .elemental-ff {
-        font-family: "Elemental"
-      }
+    @font-face {
+      font-family: "Elemental";
+      font-style: normal;
+      font-weight: normal;
+      src: url("./assets/fonts/Elemental End.ttf");
+    }
 
-    </style>
-  </head>
+    .elemental-ff {
+      font-family: "Elemental"
+    }
 
-  <body>
-    <app-root><span class="loading-header elemental-ff">NeoCom</span>
-      <span class="loading elemental-ff">&nbsp;&nbsp;&nbsp;&nbsp;Loading...</span></app-root>
-  </body>
+  </style>
+</head>
+
+<body>
+  <app-root><span class="loading-header elemental-ff">NeoCom</span>
+    <span class="loading elemental-ff">&nbsp;&nbsp;&nbsp;&nbsp;Loading...</span></app-root>
+</body>
 
 </html>
