--- a/Neocom.WebUI/src/index.html
+++ b/Neocom.WebUI/src/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <!-- Menu styles -->
   <!-- <link rel="stylesheet" href="https://unpkg.com/ng2-menu/dist/ng2-menu.css" /> -->
+  <link rel="stylesheet" href="/assets/styles.css">
 
   <style>
     .loading {
