-Saving copied code into the repository.
Former-commit-id: c6efeeda270da1b0bd22fa8ffe7770aa4232549a

--- a/NeoCom.Incubation/src/index.html
+++ b/NeoCom.Incubation/src/index.html
@@ -50,7 +50,7 @@
 <body>
   <app-root>
     <div>
-      <span class="loading-header elemental-ff">NeoCom</span>
+      <span class="loading-header elemental-ff">NeoCom-Infinity</span>
       <span class="loading elemental-ff">&nbsp;&nbsp;&nbsp;&nbsp;Loading...</span>
     </div>
   </app-root>
