--- a/NeoCom.Incubation/src/index.html
+++ b/NeoCom.Incubation/src/index.html
@@ -11,18 +11,107 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <!-- Startup styles for the initialization head -->
   <style>
-    .loading {
-      font-size: 24px;
-      text-shadow: 0px 0px 6px white;
-      padding-right: 30px;
+    #indexborder-red {
+      line-height: 1;
+      background-color: #080808;
+      height: auto;
+      margin-bottom: 2px;
+      opacity: 0.8;
+      position: relative;
+      border-width: 1px 1px 1px 1px;
+      border-color: #404040;
+      border-style: solid;
+    }
 
+    #indexborder-red:hover {
+      opacity: 1;
+    }
+
+    #indexborder-red:before,
+    #indexborder-red:after,
+    #indexborder-red> :first-child:before,
+    #indexborder-red> :first-child:after {
+      border: 1px red solid;
+      content: " ";
+      height: 6px;
+      position: absolute;
+      width: 6px;
+    }
+
+    #indexborder-red:before {
+      border-width: 1px 0 0 1px;
+      left: -1px;
+      top: -1px;
+    }
+
+    #indexborder-red:after {
+      border-width: 1px 1px 0 0;
+      right: -1px;
+      top: -1px;
+    }
+
+    #indexborder-red> :first-child:before {
+      border-width: 0 1px 1px 0;
+      bottom: -1px;
+      right: -1px;
+    }
+
+    #indexborder-red> :first-child:after {
+      border-width: 0 0 1px 1px;
+      bottom: -1px;
+      left: -1px;
+    }
+
+    .header-box {
+      background-color: rgb(8, 8, 8);
+      /* border-bottom-color: rgb(64, 64, 64);
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
+      border-left-color: rgb(64, 64, 64);
+      border-left-style: solid;
+      border-left-width: 1px;
+      border-right-color: rgb(64, 64, 64);
+      border-right-style: solid;
+      border-right-width: 1px;
+      border-top-color: rgb(64, 64, 64);
+      border-top-style: solid;
+      border-top-width: 1px;
+      box-sizing: border-box; */
+      color: rgb(255, 255, 255);
+      /* display: block; */
+      /* font-family: "Proxima Nova", sans-serif; */
+      font-size: 12px;
+      font-weight: 400;
+      height: 62px;
+      line-height: 12px;
+      margin-bottom: 1px;
+      margin-left: 1px;
+      margin-right: 3px;
+      margin-top: 0px;
+      opacity: 0.8;
       padding-bottom: 10px;
       padding-left: 5px;
-      /* padding-right: 10px; */
+      padding-right: 10px;
       padding-top: 10px;
-      margin: 1px;
-      margin-top: 0px;
-      margin-right: 3px;
+      position: relative;
+      text-align: left;
+      text-size-adjust: 100%;
+      width: 1030px;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    }
+
+    .loading-version {
+      box-sizing: border-box;
+      color: rgb(80, 183, 29);
+      display: inline;
+      font-family: Elemental;
+      font-size: 20px;
+      font-weight: 400;
+      height: auto;
+      line-height: 20px;
+      margin-left: 10px;
+      text-align: left;
+      text-shadow: rgb(80, 183, 29) 0px 0px 6px;
     }
 
     .loading-header {
@@ -31,6 +120,11 @@
       padding-top: 10px;
       font-size: 40px;
       text-shadow: 0px 0px 6px white;
+      color: white;
+      font-weight: 400;
+      height: auto;
+      line-height: 40px;
+      text-align: left;
     }
 
     @font-face {
@@ -49,9 +143,9 @@
 
 <body>
   <app-root>
-    <div>
+    <div class="header-box" id="indexborder-red">
       <span class="loading-header elemental-ff">NeoCom-Infinity</span>
-      <span class="loading elemental-ff">&nbsp;&nbsp;&nbsp;&nbsp;Loading...</span>
+      <span class="loading-version elemental-ff">Loading...</span>
     </div>
   </app-root>
 </body>
