--- a/NeoCom.Incubation/src/index.html
+++ b/NeoCom.Incubation/src/index.html
@@ -62,7 +62,7 @@
       left: -1px;
     }
 
-    .header-box {
+    .loading-header-box {
       background-color: rgb(8, 8, 8);
       /* border-bottom-color: rgb(64, 64, 64);
       border-bottom-style: solid;
@@ -143,7 +143,7 @@
 
 <body>
   <app-root>
-    <div class="header-box" id="indexborder-red">
+    <div class="loading-header-box" id="indexborder-red">
       <span class="loading-header elemental-ff">NeoCom-Infinity</span>
       <span class="loading-version elemental-ff">Loading...</span>
     </div>
