-[PROJECT] New branch to generate a new POC for login isolation and secure access to a common backend server. -New integration with the DataManagement and more secure isolation for the Model classes. -POC development for the new RSA secure session service.
Former-commit-id: 351b87339e82dfbf9f1daea3ad69282c3b91ae24

--- a/NeoCom.Incubation/src/index.html
+++ b/NeoCom.Incubation/src/index.html
@@ -115,7 +115,7 @@
     }
 
     .loading-header {
-      padding-left: 5px;
+      /* padding-left: 5px; */
       margin-top: 10px;
       padding-top: 10px;
       font-size: 40px;
