-Getting database credentials from configuration file. -Moved RSA key creation to after the application reinitialization on OAuth authorization. -Replaced the RSA key generation at the client end. -Application flw tested by key information and usage should be verified.
Former-commit-id: 609e4270017d00ea79d7055460d04eb51567ea52

--- a/NeoCom.Incubation/src/index.html
+++ b/NeoCom.Incubation/src/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <!-- Startup styles for the initialization head -->
   <style>
+  .loading-body{
+    background-color: black;
+  }
     #indexborder-red {
       line-height: 1;
       background-color: #080808;
@@ -141,7 +144,7 @@
   </style>
 </head>
 
-<body>
+<body class="loading-body">
   <app-root>
     <div class="loading-header-box" id="indexborder-red">
       <span class="loading-header elemental-ff">NeoCom-Infinity</span>
