-[FRONTEND] Added the font, styles and other configuration to get the right panel displey. -[VISUALTEST] Create the code to test the App Name Panel visually. -[BUG] Fix the copyright label error.
Former-commit-id: aebd1d10c8b91a8d6cf11a67a16d7c5c5a39ae2e

--- a/NeoCom.Infinity.Frontend/src/index.html
+++ b/NeoCom.Infinity.Frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>NeoComInfinity</title>
@@ -8,16 +9,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-</style>
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 14px;
+      color: white;
+      background-color: black;
+      box-sizing: border-box;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+  </style>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
