-[FRONTEND] Written the code to call the backend and process a valid response. -[FRONTEND] Added service code to perform calls to the mock server using the proxy tunnel. -[FRONTEND] Added a minor exception handling.
Former-commit-id: 7b130e3210a1bc927dca7abfee0c86496ca7b9fb

--- a/NeoCom.Infinity.Frontend/src/index.html
+++ b/NeoCom.Infinity.Frontend/src/index.html
@@ -38,10 +38,15 @@
       color: #1A53FF;
       margin-top: 64px;
     }
+
+    .loading {
+      color: white;
+      background-color: black;
+    }
   </style>
 </head>
 
-<body>
+<body class="loading">
   <app-root>
     <div class="index-loading">LOADING NEOCOM APPLICATION...<br>v0.16.0</div>
   </app-root>
