--- a/NeoCom.Infinity.Frontend/src/index.html
+++ b/NeoCom.Infinity.Frontend/src/index.html
@@ -2,54 +2,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>NeoCom.Infinity</title>
-  <base href="/app">
+    <meta charset="utf-8">
+    <title>NeoCom.Infinity</title>
+    <base href="/app">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- F O N T A W E S O M E 4 . 7 . 0 -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <!-- F O N T A W E S O M E 4 . 7 . 0 -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-  <style>
-    :host {
-      font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      font-size: 14px;
-      color: white;
-      background-color: black;
-      box-sizing: border-box;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-    /* body {
+    <style>
+         :host {
+            font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-size: 14px;
+            color: white;
+            background-color: black;
+            box-sizing: border-box;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        /* body {
        background: url('/assets/images/medical.jpg') no-repeat center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
     } */
-    .index-loading {
-      text-align: center;
-      font-size: 30px;
-      font-family: 'Prototype', sans-serif;
-      color: #1A53FF;
-      margin-top: 64px;
-    }
-
-    .loading {
-      color: white;
-      background-color: black;
-    }
-  </style>
+        
+        .index-loading {
+            text-align: center;
+            font-size: 30px;
+            /* font-family: 'Prototype', sans-serif; */
+            color: #1A53FF;
+            margin-top: 64px;
+        }
+        
+        .loading {
+            color: white;
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body class="loading">
-  <app-root>
-    <div class="index-loading">LOADING NEOCOM APPLICATION...<br>v0.16.0</div>
-  </app-root>
+    <app-root>
+        <div class="index-loading">LOADING NEOCOM APPLICATION...<br>v0.16.0</div>
+    </app-root>
 </body>
 
 </html>
