-[HEROKU] The production index page should be different than the development because the login call changes.
Former-commit-id: a9c9aa31449cb570e3c1da28c432b16320c5ab68

--- a/NeoCom.Infinity.Frontend/public/home-development.html
+++ b/NeoCom.Infinity.Frontend/public/home-development.html
@@ -120,10 +120,7 @@
 
 <body>
     <div _ngcontent-det-c2="" class="neocom-panel panel-white app-info-panel"><span _ngcontent-det-c2="" class="app-name elemental-ff">NeoCom.Infinity</span><span _ngcontent-det-c2="" class="app-version elemental-ff" style="margin-left:10px;">0.16.0</span><span _ngcontent-det-c2="" class="app-copyright">© 2019,2020 Dimensinfin Industries</span></div>
-    <form action="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=eacaa9cd36594189877544d851753734&state=LU5FT0NPTS5JTkZJTklUWS1ERVZFTE9QTUVOVC1WQUxJRCBTVEFURSBTVFJJTkct&redirect_uri=http%3A%2F%2Fneocom.infinity.local%2Fapp%2FloginValidation">
-        <div> <input type="image" src="eve-sso-login-black-large.png" class="eve-login-request" name="saveForm" id="saveForm">
-        </div>
-    </form>
+    <a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=eacaa9cd36594189877544d851753734&state=LU5FT0NPTS5JTkZJTklUWS1ERVZFTE9QTUVOVC1WQUxJRCBTVEFURSBTVFJJTkct&redirect_uri=http%3A%2F%2Fneocom.infinity.local%2Fapp%2FloginValidation"><img class="eve-login-request" src="assets/media/eve-sso-login-black-large.png"></a>
 </body>
 
 </html>
