--- a/NeoCom.Infinity.Frontend/public/home.html
+++ b/NeoCom.Infinity.Frontend/public/home.html
@@ -5,7 +5,7 @@
     <style>
         @font-face {
             font-family: 'Proxima Nova';
-            src: url('/assets/fonts/ProximaNovaRegular.ttf') format('truetype');
+            src: url('assets/fonts/ProximaNovaRegular.ttf') format('truetype');
             font-weight: 400;
             font-style: normal;
         }
@@ -18,7 +18,7 @@
             font-family: "Elemental";
             font-style: normal;
             font-weight: normal;
-            src: url("/assets/fonts/ElementalEnd.ttf") format('truetype');
+            src: url("assets/fonts/ElementalEnd.ttf") format('truetype');
         }
         
         .elemental-ff {
@@ -120,10 +120,7 @@
 
 <body>
     <div _ngcontent-det-c2="" class="neocom-panel panel-white app-info-panel"><span _ngcontent-det-c2="" class="app-name elemental-ff">NeoCom.Infinity</span><span _ngcontent-det-c2="" class="app-version elemental-ff" style="margin-left:10px;">0.16.0</span><span _ngcontent-det-c2="" class="app-copyright">© 2019,2020 Dimensinfin Industries</span></div>
-    <form action="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=98eb8d31c5d24649ba4f7eb015596fbd&state=LU5FT0NPTS5JTkZJTklUWS1ERVZFTE9QTUVOVC1WQUxJRCBTVEFURSBTVFJJTkct&redirect_uri=http%3A%2F%2Fneocom.infinity.herokuapp.com%2Fapp%2FloginValidation">
-        <div> <input type="image" src="eve-sso-login-black-large.png" class="eve-login-request" name="saveForm" id="saveForm">
-        </div>
-    </form>
+    <a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=98eb8d31c5d24649ba4f7eb015596fbd&state=LU5FT0NPTS5JTkZJTklUWS1ERVZFTE9QTUVOVC1WQUxJRCBTVEFURSBTVFJJTkct&redirect_uri=http%3A%2F%2Fneocom-infinity.herokuapp.com%2Fapp%2FloginValidation"><img class="eve-login-request" src="assets/media/eve-sso-login-black-large.png"></a>
 </body>
 
 </html>
